--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -90,7 +90,7 @@
     </dependencies>
 
     <build>
-        <finalName>thirdpart-mzy-${project.version}</finalName>
+        <finalName>delivery-platform-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
