--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -44,5 +45,5 @@
     "customize-cra": "^0.9.1",
     "react-app-rewired": "^2.1.5"
   },
-  "proxy": "http://dohko.third.finance.supplychain.hualala.com"
+  "proxy": "http://wcpay.ictry.com:5050/"
 }
