--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -26,6 +26,9 @@ management:
     servlet:
       context-path: /
 
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
+
 
 logging:
   level:
