--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,5 @@
     "customize-cra": "^0.9.1",
     "react-app-rewired": "^2.1.5"
   },
-  "proxy": "http://wcpay.ictry.com:5050/"
+  "proxy": "http://localhost:7000/"
 }
