--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -25,6 +25,12 @@ management:
     port: 17000
     servlet:
       context-path: /
+    tomcat:
+      uri-encoding: UTF-8
+    compression:
+      enabled: true
+      mimeTypes: application/json,application/xml,text/html,text/xml,text/plain,application/javascript,text/css
+
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
