--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.29</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.5.1</version>
+        </dependency>
         <!--swagger -->
         <dependency>
             <groupId>io.springfox</groupId>
